# youtube-summarise-transcript

./: .gcloudignore  .gitignore  Dockerfile  deploy  dev  env.yaml  gcloud  main.py  pyproject.toml  shell
